# SpectrumAnalyser

./: .gitignore  CMakeLists.txt  README.md  SpectrumAnalyser.cxx  SpectrumAnalyser.h  run_analysis.cpp  version.h
include/: SpectrumAnalyser.h  version.h
src/: CMakeLists.txt  SpectrumAnalyser.cxx  SpectrumAnalyserCreateHistos.cxx  SpectrumAnalyserDrawHistos.cxx  SpectrumAnalyserPeakFinder.cxx  SpectrumAnalyserPrecalib.cxx  SpectrumAnalyserSearchPeaks.cxx  SpectrumAnalyserWriteHistos.cxx
